memperbaiki kesalahan minor

--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
         <div class="has-search">
           <!--<input type="text" placeholder="Search.." name="search">
           <button type="submit"><i class="fa fa-search"></i></button>-->
-          <input type="text" class="form-control" placeholder="Cari Dataset">
+          <input type="text" class="form-control" placeholder="Silahkan ketik dataset yang kamu cari!">
           <button class="form-control-feedback"><i class="fas fa-search"></i></button>
         </div>  
       </div> 
