--- a/lihatdataset.html
+++ b/lihatdataset.html
@@ -172,7 +172,7 @@
         </div>
         <div class="filterdt">
           <button class="btn dropdown-toggle" type="button" id="dropdownMenu2" data-mdb-toggle="dropdown" aria-expanded="false">
-            Filter Dataset
+            Filter Data
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
             <li><button class="dropdown-item" type="button">Terbaru</button></li>
@@ -404,10 +404,10 @@
           Atribusi
         </h6>
         <p>
-          <a href="#!"><i class="fab fa-google"></i> bdg.data</a>
+          <a href="#!"><i class="fab fa-google"></i> data@bandung.go.id</a>
         </p>
         <p>
-          <a href="#!"><i class="fab fa-instagram"></i> data@bandung.go.id</a>
+          <a href="#!"><i class="fab fa-instagram"></i> bdg.data</a>
         </p>
       </div>
 
