--- a/home.html
+++ b/home.html
@@ -280,7 +280,7 @@
         Grup
       </h1>
       <div class="row row-cols-md-4 row-cols-1">
-        <div class="col col-6 mb-4">
+        <div class="col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="administrasi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/administrasi.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -288,12 +288,12 @@
             <div class="img2">
               <a href="administrasi.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoveradm.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
-            <div class="label-ds text-center mt-3">
+            <div class="tittle-org label-ds text-center mt-3">
               Administrasi Pemerintahan
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="ekonomi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/ekonomi.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -306,7 +306,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="infrastruktur.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/infrastruktur.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -319,7 +319,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="kependudukan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kependudukan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -332,7 +332,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="kesehatan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kesehatan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
@@ -345,7 +345,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="lingkungan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/lingkungan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
@@ -358,7 +358,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="pendidikan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/pendidikan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
@@ -371,7 +371,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="sosial.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/sosial.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -498,10 +498,10 @@
             Atribusi
           </h6>
           <p>
-            <a href="#!"><i class="fab fa-google"></i> bdg.data</a>
+            <a href="#!"><i class="fab fa-google"></i> data@bandung.go.id</a>
           </p>
           <p>
-            <a href="#!"><i class="fab fa-instagram"></i> data@bandung.go.id</a>
+            <a href="#!"><i class="fab fa-instagram"></i> bdg.data</a>
           </p>
         </div>
   
