--- a/kesehatan.html
+++ b/kesehatan.html
@@ -354,10 +354,10 @@
             Atribusi
           </h6>
           <p>
-            <a href="#!"><i class="fab fa-google"></i> bdg.data</a>
+            <a href="#!"><i class="fab fa-google"></i> data@bandung.go.id</a>
           </p>
           <p>
-            <a href="#!"><i class="fab fa-instagram"></i> data@bandung.go.id</a>
+            <a href="#!"><i class="fab fa-instagram"></i> bdg.data</a>
           </p>
         </div>
   
