--- a/home.html
+++ b/home.html
@@ -12,12 +12,12 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-
+    
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 
     <!-- Google Fonts Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
     <!-- MDB -->
     <link rel="stylesheet" href="assets/css/mdb.min.css" />
@@ -168,7 +168,7 @@
         Highlight Data
       </h1>
       <div id="carouselExampleControls" class="carousel slide" data-mdb-ride="carousel">
-        <div class="carousel-inner" style="height: 350px;">
+        <div class="carousel-inner" style="height: 390px;">
           <div class="carousel-item active">
             <div class="cards-wrapper">
 
