--- a/grup.html
+++ b/grup.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Data Sektoral - Open Data Kota Bandung</title>
+    <title>Home - Open Data Kota Bandung</title>
 
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-
+    
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 
     <!-- Google Fonts Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
     <!-- MDB -->
     <link rel="stylesheet" href="assets/css/mdb.min.css" />
@@ -142,7 +142,7 @@
     <!--::: Section Data Sektoral Website :::-->
     <section class="sektoral2 content-fluid">
       <div class="row row-cols-md-4 row-cols-1">
-        <div class="col col-6 mb-4">
+        <div class="col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="administrasi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/administrasi.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -150,12 +150,12 @@
             <div class="img2">
               <a href="administrasi.html"><img class="image img2 img-fluid d-block mx-auto"  src="assets/image/hoveradm.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
             </div>
-            <div class="label-ds text-center mt-3">
+            <div class="tittle-org label-ds text-center mt-3">
               Administrasi Pemerintahan
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="ekonomi.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/ekonomi.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -168,7 +168,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="infrastruktur.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/infrastruktur.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -181,7 +181,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="kependudukan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kependudukan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
@@ -194,7 +194,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="kesehatan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/kesehatan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
@@ -207,7 +207,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="lingkungan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/lingkungan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
@@ -220,7 +220,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="pendidikan.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/pendidikan.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px;"></a>
@@ -233,7 +233,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-6 mb-4">
+        <div class="col col col-md-6 col-lg-4 col-xl-3">
           <div class="thumbnail">
             <div class="img1">
               <a href="sosial.html"><img class="image img-fluid d-block mx-auto"  src="assets/image/sosial.png" style="box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25); border-radius: 25px; "></a>
