--- a/pratinjau data rev-matadata.html
+++ b/pratinjau data rev-matadata.html
@@ -297,16 +297,16 @@
       </h1>
       <div class="row boxrek">
         <div class="col-sm-6">
-          <div class="card" style="width: auto; box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.25) !important">
+          <div class="card" style="width: auto; box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25) !important;   margin-bottom: 12px;">
             <div class="card-body justify-content-between">
               <div class="row consboxrek">
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-3">
+                <div class="col-sm-5 col-md-4 col-lg-4 col-xl-3" style="padding-bottom: 10px;">
                   <div class="flex-shrink-0">
                     <img class="icondt1" width="20px" src="assets/image/icondata2.png">
                   </div>
                 </div>
-                <div class="col-sm-8 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto; margin-bottom: auto;">
-                  <div class="flex-grow-1 ms-3">
+                <div class="col-sm-7 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto; margin-bottom: auto;">
+                  <div class="flex-grow-1">
                     <div>
                       <a class="dttitle-lhtd" href="#">Kerb Terpelihara di Kecamatan Mandalajati Kota Bandung</a>
                     </div>
@@ -327,16 +327,16 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card" style="width: auto; box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.25) !important">
+          <div class="card" style="width: auto; box-shadow: 0px 3.5px 10px 1.3px rgba(0, 0, 0, 0.25) !important; margin-bottom: 12px;">
             <div class="card-body justify-content-between">
               <div class="row consboxrek">
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xl-3">
+                <div class="col-sm-5 col-md-4 col-lg-4 col-xl-3" style="padding-bottom: 10px;">
                   <div class="flex-shrink-0">
                     <img class="icondt1" width="20px" src="assets/image/icondata1.png">
                   </div>
                 </div>
-                <div class="col-sm-8 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto;  margin-bottom: auto;">
-                  <div class="flex-grow-1 ms-3">
+                <div class="col-sm-7 col-sm-8 col-md-8 col-lg-8 col-xl-9" style="margin-top: auto;  margin-bottom: auto;">
+                  <div class="flex-grow-1">
                     <div>
                       <a class="dttitle-lhtd" href="#">Perpustakaan di Kecamatan 
                         Mandalajati Kota Bandung</a>
