--- a/pratinjaudt-standard.html
+++ b/pratinjaudt-standard.html
@@ -391,10 +391,10 @@
             Atribusi
           </h6>
           <p>
-            <a href="#!"><i class="fab fa-google"></i> bdg.data</a>
+            <a href="#!"><i class="fab fa-google"></i> data@bandung.go.id</a>
           </p>
           <p>
-            <a href="#!"><i class="fab fa-instagram"></i> data@bandung.go.id</a>
+            <a href="#!"><i class="fab fa-instagram"></i> bdg.data</a>
           </p>
         </div>
   
@@ -406,9 +406,9 @@
       <div class="row">
         <div class="col-md-12 col-lg-12 col-xl-12 mx-auto" style="padding: 0px;">
           <div class="mt-4">
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
-            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitra.png); color:#D9D9D9; border-radius: 5px 5px;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrabdg.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitrasd.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
+            <a href="#" type="button" class="btn btn-floating btn-lg" style="background: url(assets/image/mitradsk.jpg); color:#D9D9D9; border-radius: 5px 5px; background-size: cover;"></i></a>
           </div>
         </div>
       </div>
